Bug#70622 error result when use between...and againest bigint unsigned Bug#17606942 ERROR RESULT WHEN USE BETWEEN...AND AGAINEST BIGINT UNSIGNED

Post-push fix:

For unsigned value:
  value BETWEEN <some negative number> AND <some number>
  rewritten to
  value BETWEEN 0 AND <some number>

Also: record new results for incorrect .result files.